k8s/staging/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: packstack-api-deployment
  labels:
    app: packstack-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: packstack-api
  template:
    metadata:
      labels:
        app: packstack-api
    spec:
      containers:
        - name: packstack-api
          image: registry.digitalocean.com/packstack/packstack-api
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: packstack-api-service
spec:
  selector:
    app: packstack-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30000
