k8s/staging/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: packstack-api-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
    - hosts:
        - dev-api.packstack.io
      secretName: packstack-api-tls
  rules:
    - host: dev-api.packstack.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: packstack-api-service
                port:
                  number: 80
